# inkstitch

./: .gitignore  .gitmodules  .mypy.ini  .packit.yaml  .travis.yml  404.md  BUILD.md  CNAME  CODE_OF_CONDUCT.md  CODING_STYLE.md  CONTRIBUTING.md  DEBUG  DEBUG_template.ini  DEBUG_template.toml  DEVELOPMENT_UV_GUIDE.md  DEVEL_template.ini  LICENSE  LOCALIZATION.md  LOGGING_template.toml  Makefile  NEW_FEATURES.md  PYPROJECT_DRAFT.md  PyEmb.py  README.md  README_de.md  README_en.md  TODO  TODOS.md  _config.yml  azure-pipelines.yml  babel.conf  crowdin.yml  embroider.inx  embroider.py  embroider.py.save  embroider_input.py  embroider_install_palettes.py  embroider_palettes.py  embroider_params.inx  embroider_params.py  (+42 more)
.github/: dependabot.yml  mypy-github-formatter  pull_request_template.md
_data/: navigation.yml  navigation_da.yml  navigation_de.yml  navigation_en.yml  navigation_fr.yml  navigation_ru.yml  params.yml  ui-text.yml
_developers/: 001-001-introduction.md  002-001-inkstitch.md  002-002-manual-setup.md  002-003-python-modules.md  006-001-report-bugs.md
_docs/: 001-001-install.md  001-002-customize.md  001-003-basic-usage.md  001-003-workflow.md  001-004-workflow.md  002-001-params.md  002-002-simulate.md  002-003-Print.md  002-003-flip-satin-columns.md  002-004-addons.md  002-004-import-export.md  002-005-addons.md  002-005-palettes.md  002-005-print.md  002-006-import-export.md  003-001-fill.md  003-001-stroke.md  003-002-satin.md  003-003-fill.md  003-003-stroke.md  004-001-fonts.md  004-002-features.md  005-001-faq.md  005-001-get-help.md  005-002-bugs.md  005-002-faq.md  005-003-bugs.md  005-003-error-messages.md  005-004-error-messages.md  006-000-get-involved.md  006-000-report-bugs.md  006-001-report-bugs.md  006-002-documentation.md  006-003-localize.md  006-004-developing .md
_includes/: display_tutorials  folder-galleries  footer.html  masthead.html  nav_list  tutorial_list  tutorial_select_order
_pages/: about.md  features.md  namespace.md  news.md  sitemap.md  terms.md
_posts/: 2017-12-06-video-demo.md  2018-01-01-video-stitch-preview.md  2018-01-05-dpi.md  2018-02-05-translation.md  2018-02-22-windows-support.md  2018-04-16-new-website.md  2018-05-05-v1.7.1.md  2018-05-20-v1.8.0.md  2018-05-30-v1.8.1.md  2018-06-08-v1.8.2.md  2018-06-16-v1.9.1.md  2018-06-30-v1.11.0.md
_tutorial/: applique.md  custom-origin.md  embroidering-the-inkscape-logo.md  fringe.md  hoop-template.md  inkstitch-logo.md  monogram.md  puff.md  push-pull-compensation.md
_tutorials/: 000-tutorials.md  001-001-galleries.md  001-001-lexelby.md  001-tutorials.md  002-001-branding-guide.md  002-001-samples.md  002-001-templates.md  002-002-samples.md  002-003-templates.md  002-examples.md  003-001-inkstitch-tutorials.md  003-002-videos.md  003-inkstitch-tutorials.md  004-embroidery-tutorials.md
barstitch_bold/: font.json
barstitch_textured/: font.json
dbus/: select_elements.py
dmg/: build-inkstitch-dmg.py  icon.icns
electron/: .browserslistrc  README.md  babel.config.js  package-lock.json  package.json  tsconfig.json
git-hooks/: README.md  pre-commit
inkscape_dialog/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  Makefile  inkstitch-dialog.inx  inkstitch-dialog.ui
inkscape_dialog/src/: inkstitch-dialog.cpp  inkstitch-dialog.h  inkstitch-dialog.ui  inkstitch.idlg
inkstitch/: __init__.py  extensions.py  simulator.py  svg.py
installer_scripts/: distribution.plist  entitlements.plist  file_version_info.txt  inkstitch.plist  template.iss
inx/: embroider_input_100.inx  embroider_input_10O.inx  embroider_input_BRO.inx  embroider_input_COL.inx  embroider_input_CSD.inx  embroider_input_CSV.inx  embroider_input_DAT.inx  embroider_input_DSB.inx  embroider_input_DST.inx  embroider_input_DSZ.inx  embroider_input_EDR.inx  embroider_input_EMD.inx  embroider_input_EXP.inx  embroider_input_EXY.inx  embroider_input_FXY.inx  embroider_input_GT.inx  embroider_input_HUS.inx  embroider_input_INB.inx  embroider_input_INF.inx  embroider_input_JEF.inx  embroider_input_KSM.inx  embroider_input_MAX.inx  embroider_input_MIT.inx  embroider_input_NEW.inx  embroider_input_OFM.inx  embroider_input_PCD.inx  embroider_input_PCM.inx  embroider_input_PCQ.inx  embroider_input_PCS.inx  embroider_input_PEC.inx  embroider_input_PES.inx  embroider_input_PHB.inx  embroider_input_PHC.inx  embroider_input_PLT.inx  embroider_input_RGB.inx  embroider_input_SEW.inx  embroider_input_SHV.inx  embroider_input_SST.inx  embroider_input_STX.inx  embroider_input_T01.inx  (+90 more)
its/: inx.its
lib/: PYPROJECT_DRAFT.md  __init__.py  commands.py  debug.py  debug_logging.py  debug_utils.py  exceptions.py  i18n.py  marker.py  metadata.py  output.py  patterns.py  sew_stack.py  simulator.py  tiles.py  types.py  update.py
palettes/: ARC Polyester.gpl  Anchor.gpl  Aurifil Lana.gpl  Aurifil Polyester.gpl  Aurifil Rayon.gpl  Aurifil Royal.gpl  Brildor AC.gpl  Brildor CO.gpl  Brildor NY.gpl  Brildor PB.gpl  Brother Country.gpl  Coats Alcazar.gpl  Coats Sylko USA.gpl  Coats Sylko.gpl  DMC.gpl  Emmel.gpl  Fil-Tec Glide.gpl  Floriani Polyester.gpl  FuFu Rayon.gpl  Gutermann Creativ Dekor.gpl  InkStitch ARC Rayon.gpl  InkStitch Admelody Polyester.gpl  InkStitch Admelody Rayon.gpl  InkStitch Aurifil Mako.gpl  InkStitch BFC Polyester.gpl  InkStitch Brildor MF.gpl  InkStitch Brother Embroidery.gpl  InkStitch Brothread 40.gpl  InkStitch Brothread 80.gpl  InkStitch Coats Alcazar Jazz.gpl  InkStitch Embroidex.gpl  InkStitch FuFu Polyester.gpl  InkStitch Gunold Polyester.gpl  InkStitch Gunold.gpl  InkStitch Hemingworth.gpl  InkStitch Isacord Polyester.gpl  InkStitch Isafil Rayon.gpl  InkStitch Isalon Polyester.gpl  InkStitch MTB - Embroidex.gpl  InkStitch Madeira Burmilana.gpl  (+39 more)
pixel10/: LICENSE
pyinstaller-hooks/: hook-cefpython3.py
pyinstaller_hooks/: hook-lib.extensions.py  hook-lib.utils.py  hook-pystitch.py
python-wheels/: Shapely-1.6.3-cp27-cp27m-win32.whl  Shapely-1.7.1-cp35-cp35m-macosx_10_6_intel.whl  Shapely-1.7.1-cp35-cp35m-manylinux1_x86_64.whl  Shapely-1.7.1-cp35-cp35m-win32.whl
(+2934 files in other folders)
