###
### update packages: uv sync -U  # update all packages
###                  uv sync     # removes all packages not in pyproject.toml
###                  uv sync --inexact   # do not remove extraneous packages, as installed by uv pip install
### as requirements.txt: uv pip install -r pyproject.toml | requirements.txt

[project]
name = "inkstitch"
version = "0.1.0"
description = "An open-source machine embroidery design platform based on Inkscape"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    ### *** PyEmbroidery dependency (create package on the fly) ***
    #  "pyembroidery @ git+https://github.com/inkstitch/pyembroidery",

    # TODO: last commit with pyembroidery name, change after pystitch will be included in inkstitch code
    "pyembroidery @ git+https://github.com/inkstitch/pystitch@13e94dbfc4a3b7de93ce2e771bf8ccf22e3551cb",

    ### wxPython:
    ### - "uv pip install wxpython @ https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-22.04/wxpython-4.2.3-cp311-cp311-linux_x86_64.whl"
    "wxpython",

    ### Linux or Darwin GObject introspection (pygobject > 3.50 depends on gir2)
    "pygobject<=3.50 ; sys_platform == 'linux' or sys_platform == 'darwin'",


    # For macOS and Windows our installer bundles the version specified here
    # but some Linux distros package Ink/Stitch as depending on the inkex that's bundled with Inkscape.
    # So at least for releases we should use a tagged version here such as EXTENSIONS_AT_INKSCAPE_$version.
    "inkex @ git+https://gitlab.com/inkscape/extensions.git@EXTENSIONS_AT_INKSCAPE_1.4.1",


    "networkx", ### graphs library
    "shapely~=2.0.0", ### geometry library
    "lxml", ### XML library
    "platformdirs", ### cross-platform directories
    "numpy<2.3.0", ### array library
    "jinja2>2.9", ### templating engine
    # "requests", ### HTTP library
    "tomli; python_version < '3.11'", ### TOML parser
    "colormath2", ### color math library
    "flask>=2.2.0", ### web framework
    "fonttools", ### font library
    "trimesh>=3.15.2", ### 3D mesh library
    "diskcache", ### caching library
    # "flask-cors", ### CORS support for Flask - Cross-Origin Resource Sharing)

    "pywinutils ; sys_platform == 'win32'", ### Windows utils
    "pywin32 ; sys_platform == 'win32'", ### Windows utils
]


[dependency-groups]
### added by: uv add xxx --dev
### remove by: uv remove xxx --dev
dev = [
    "pytest",
    "pyinstaller",
    # Misc dev dependencies
    "types-wxpython",
    "types-appdirs",
    "types-shapely",
    "types-networkx",
    "types-lxml",
    "types-pywin32; sys_platform == 'win32'",
]

